--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,7 @@ jobs:
           git checkout public
           git add .
           git status
+          git config --global user.email "brad@malloy.io"
+          git config --global user.name "GitHub Actions"
           git commit -m "creating obfuscated commit thru GH action..."
           git push
