--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.PAT }}
+          
+      - name: Merge latest master
+        run: |
+          git fetch
+          git checkout public
+          git merge master
 
       # Runs a set of commands using the runners shell
       - name: Obfuscate-Javascript
@@ -33,9 +39,6 @@ jobs:
         
       - name: Push to public
         run: |
-          git fetch
-          git checkout public
-          git merge master
           git add .
           git status
           git config --global user.email "brad@malloy.io"
