--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,22 +26,26 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.PAT }}
-          
-      - name: Check status
-        run: |
-         git status
-         git log
 
       # Runs a set of commands using the runners shell
       - name: Obfuscate-Javascript
         uses: florrdv/JS-Obfuscator@v1.0.2
         
-      - name: Commit and push obfuscated to public
+      - name: Fetch, add changes to public, check status
         run: |
+          git fetch
           git checkout public
           git add .
           git status
+      
+      - name: Configure, commit, and push
+        run: |
           git config --global user.email "brad@malloy.io"
           git config --global user.name "GitHub Actions"
-          git commit -m "creating obfuscated commit thru GH action..."
+          git commit -m "Creating an obfuscated commit thru GH action..."
           git push
+      
+      - name: Final status check
+        run: |
+          git status
+          git log
