--- a/.github/workflows/update-data.js.yml
+++ b/.github/workflows/update-data.js.yml
@@ -24,3 +24,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: node update.js
+    - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git diff-index --quiet HEAD || git commit -m "[skip ci] Save result of action"
+          git push
