--- a/.github/workflows/update-data.js.yml
+++ b/.github/workflows/update-data.js.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm i
     - run: node update.js
     - run: |
           git config user.name github-actions
